crates/aimee_markdown_stream/src/snapshots/aimee_markdown_stream__table__tests__varying_column_widths.snap
---
source: crates/aimee_markdown_stream/src/table.rs
expression: "render(vec![vec![\"Short\", \"Much Longer Header\"], vec![\"a\", \"b\"],])"
---
  ┌───────┬────────────────────┐
  │ Short │ Much Longer Header │
  ├───────┼────────────────────┤
  │ a     │ b                  │
  └───────┴────────────────────┘
