crates/aimee_markdown_stream/src/snapshots/aimee_markdown_stream__table__tests__very_narrow_width.snap
---
source: crates/aimee_markdown_stream/src/table.rs
expression: "render_with_width(vec![vec![\"Column A\", \"Column B\"],\nvec![\"value1\", \"value2\"],], 25)"
---
  ┌──────────┬──────────┐
  │ Column A │ Column B │
  ├──────────┼──────────┤
  │ value1   │ value2   │
  └──────────┴──────────┘
