crates/aimee_markdown_stream/src/snapshots/aimee_markdown_stream__table__tests__whitespace_content.snap
---
source: crates/aimee_markdown_stream/src/table.rs
expression: "render(vec![vec![\"Header\", \"Value\"], vec![\"  spaces  \", \"   \"],])"
---
  ┌────────────┬───────┐
  │ Header     │ Value │
  ├────────────┼───────┤
  │   spaces   │       │
  └────────────┴───────┘
